genetic algorithm. im so sorry if i overwrote anything idk how to use git

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,26 @@
     <groupId>sg.edu.nus.comp.cs3243</groupId>
     <artifactId>tetris-ai</artifactId>
     <version>1.0</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-    
+
 </project>
